# pyCUDLibcal

./: README.md  main.py  pyproject.toml  setup.py
examples/: interactive_booking.py
pyCUDLib/: client.py  pycudlib_base.py  requirements.txt
pyCUDLib/errors/: status_code_exception.py
pyCUDLib/methods/: availability.py  space_booking.py
pyCUDLib/modules/: __init__.py  booking_responce.py  grid.py
pyCUDLib/utils/: parse.py
