[project]
name = "pyCUDLib"
version = "0.1a"
authors = [
  { name="Bezumnui", email="bezumnui.mistikgt@gmail.com" },
]
description = "Interactive Library Room Reservation for CUD HUB Campus"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["aiohttp>=3.0.0"]




#license = "MIT"

[project.urls]
Homepage = "https://github.com/bezumnui/pyCUDLibcal"
Issues = "https://github.com/bezumnui/pyCUDLibcal/issues"